--- a/style.css
+++ b/style.css
@@ -1,21 +1,17 @@
-#title {
+.textCenter {
   text-align: center;
 }
-#color-options {
+
+.colors {
   width: fit-content;
-  text-align: center;
   margin: auto;
 }
+
 .ball {
   display: inline-block;
-  width: 75px;
-  height: 75px;
+  width: 50px;
+  height: 50px;
   border: 1px solid black;
-  border-radius: 100%;
-  margin-right: 10px;
-}
-#reset-game {
-  display: block;
-  width: fit-content;
-  margin: auto;
+  border-radius: 50%;
+  margin: auto 5px;
 }
